bug() -> Speicher logik zum überschreiben war falsch